# codebase-index

./: .doc-config.json  .doc-manifest.json  .gitignore  CLAUDE.md  CODEBASE_INDEX_BUG_REPORT.md  CONTRIBUTING.md  DESIGN.md  DOCUMENTATION_GENERATOR_SPEC.md  IMPLEMENTATION_PLAN.md  QA_REPORT_v2.2.0.md  QA_REPORT_v2.3.0.md  README.md  codebase_index.py  pyproject.toml
.claude/skills/codebase-analysis/: SKILL.md
.claude/skills/generate-docs/: SKILL.md
.claude/skills/generate-docs/templates/: doc-config.json  doc-manifest.json
.claude/skills/generate-docs/templates/doc-templates/: api-endpoint.md  frontend-page.md
.github/workflows/: docs-maintenance.yml
codebase_index/: __init__.py  __main__.py  call_graph.py  cli.py  config.py  incremental.py  scanner.py  utils.py
codebase_index/analyzers/: __init__.py  auth.py  centrality.py  complexity.py  consolidated_docs.py  coupling.py  coverage.py  doc_generator.py  execution_flow.py  impact.py  imports.py  mkdocs.py  orphans.py  schema_mapper.py  semantic.py  staleness.py  summaries.py  templates.py  test_mapper.py  watcher.py
codebase_index/parsers/: __init__.py  base.py  docker.py  python.py  sql.py  typescript.py
codebase_index/scanners/: __init__.py  alembic.py  dependencies.py  env.py  http_calls.py  middleware.py  routes.py  todo.py  websocket.py
codebase_index/templates/claude/agents/: doc-generator.md
codebase_index/templates/claude/skills/generate-docs/: SKILL.md
codebase_index/templates/claude/skills/generate-docs/templates/: doc-config.json  docs-maintenance.yml
codebase_index/templates/claude/skills/generate-docs/templates/doc-templates/: db-model.md  index.md  module.md
codebase_index/templates/hooks/: pre-commit-docs
codebase_index/templates/workflows/: docs-maintenance.yml
docs/: API.md  ARCHITECTURE.md  FULL_REFERENCE.md  README.md
docs/analyzers/: README.md  auth.md  centrality.md  complexity.md  coverage.md  doc_generator.md  execution_flow.md  impact.md  imports.md  orphans.md  semantic.md  staleness.md  test_mapper.md
docs/core/: README.md  call_graph.md  cli.md  config.md  incremental.md  scanner.md  utils.md
docs/parsers/: README.md  base.md  docker.md  python.md  sql.md  typescript.md
docs/scanners/: README.md  alembic.md  dependencies.md  env.md  http_calls.md  middleware.md  routes.md  todo.md  websocket.md
scripts/: pre-commit-hook.sh  setup-doc-maintenance.sh  setup-hooks.sh
scripts/hooks/: pre-commit-docs
