[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-index"
version = "3.0.0"
description = "Generate comprehensive, LLM-friendly inventories of your codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Isaac" },
]
keywords = [
    "codebase",
    "index",
    "llm",
    "ast",
    "code-analysis",
    "documentation",
    "call-graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.20.0",
]
summaries = ["httpx>=0.24.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
all = ["codebase-index[yaml,semantic,summaries,dev]"]

[project.scripts]
codebase-index = "codebase_index.cli:main"

[project.urls]
Homepage = "https://github.com/isaac/codebase-index"
Repository = "https://github.com/isaac/codebase-index"
Issues = "https://github.com/isaac/codebase-index/issues"

[tool.hatch.build.targets.wheel]
packages = ["codebase_index"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["codebase_index"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=codebase_index --cov-report=term-missing"

[tool.coverage.run]
source = ["codebase_index"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
